Refactor HTML structure and update text content

--- a/index.html
+++ b/index.html
@@ -323,8 +323,14 @@
         }
 
         @media (max-width: 768px) {
-            .title-text { font-size: 3.5rem; -webkit-text-stroke: 1px #ffffff; }
-            .year-text { font-size: 3rem; -webkit-text-stroke: 1px #ffffff; }
+            .title-text { 
+                font-size: 3.5rem; 
+                -webkit-text-stroke: 1px #ffffff;
+            }
+            .year-text { 
+                font-size: 3rem; 
+                -webkit-text-stroke: 1px #ffffff;
+            }
             .neon-ring { width: 90vw; height: 90vw; max-width: 400px; max-height: 400px; top: 40%; }
             .checkout-section { padding-bottom: 40px; }
             .process-steps { grid-template-columns: 1fr; }
@@ -452,7 +458,7 @@
         <div class="bio-box">
             <img src="https://raw.githubusercontent.com/madlen6543-prog/IMAGES-/3837de9053438dc5551eeb803893dcf45ffb0d42/%D7%AA%D7%9E%D7%95%D7%A0%D7%94%20%D7%A9%D7%9C%D7%99%20-%20%D7%A7%D7%A6%D7%AA%20%D7%A2%D7%9C%D7%99%D7%99.png" alt="מדלן פריד" class="bio-img">
             <div class="bio-content">
-                <h3>היי אני מדלן</h3>
+                <h3>היי אני <strong>מדלן</strong></h3>
                 <p>אם אתם מרגישים שיש בכם יותר ממה שיוצא החוצה, אני מבינה אתכם כל כך.<br>
                 שנים הייתי הילדה שיושבת בצד. היה לי המון מה להגיד, המון מה לתת, אבל הפחד שיתק אותי.</p>
                 <p>היום אני בחורה אמיצה שמתבטאת בביטחון ומחוברת לאינטואיציה שלה. המסע שלי לא היה קל, היו בו המון רגעי משבר. אבל בדיוק מהמקומות האלה למדתי להקשיב לאינטואיציה שלי ולתת ללב שלי להוביל.</p>
@@ -554,7 +560,7 @@
     <div id="checkout" class="container reveal">
         <div class="checkout-section">
             <div class="scarcity-badge">🔥 תפיסת מקומות אחרונים</div>
-            <h2 style="color: #ffffff; font-weight: bold; margin-bottom: 5px;">לתפוס מקום עכשיו</h2>
+            <h2 style="color: #ffffff; font-weight: bold; margin-bottom: 5px;">לתפוס מקום בשבילך</h2>
             
             <div class="price-wrapper">
                 <span class="price-tag">97 ₪</span>
@@ -565,7 +571,7 @@
                 <ul>
                     <li>✅ חוברת עבודה דיגיטלית לעבודת עומק</li>
                     <li>✅ קבוצת וואטסאפ אינטימית לשיתופים ותמיכה</li>
-                    <li>✨ הפתעות נוספות שוות במיוחד</li>
+                    <li>✨ עוד הפתעות שוות וניהול עצמי וסדר</li>
                 </ul>
             </div>
             
